Fix: Auto wrap in pre.

--- a/src/styles.css
+++ b/src/styles.css
@@ -12,6 +12,10 @@
     padding: 10px;
 }
 
-pre[data-lang="comment"] > code {
-    overflow-wrap: break-word;
+pre[data-lang="comment"] {
+    white-space: pre-wrap; /* css-3 */ 
+    white-space: -moz-pre-wrap; /* Mozilla, since 1999 */ 
+    white-space: -pre-wrap; /* Opera 4-6 */ 
+    white-space: -o-pre-wrap; /* Opera 7 */ 
+    word-wrap: break-word; /* Internet Explorer 5.5+ */ 
 }
